UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_SAP_Product_Cost_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Effective_From__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Cost_Date__c</fullName>
        <label>Product Cost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Cost__c</fullName>
        <label>Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Created_Date__c</fullName>
        <label>SAP Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Item_Code__c</fullName>
        <label>SAP Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Th_Put_Cost__c</fullName>
        <label>Th. Put Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC__c</fullName>
        <label>WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>SAP Product Cost Staging</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>SAP Product Cost Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Products Cost Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>